[gd_scene load_steps=18 format=2]

[ext_resource path="res://UpgradeBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://rocket assets/graphics/animeace_b.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://rocket assets/graphics/upgrade/unnamed.png" type="Texture" id=3]
[ext_resource path="res://Options.gd" type="Script" id=4]
[ext_resource path="res://rocket assets/graphics/animeace.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://rocket assets/graphics/frame.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 2

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 2

[sub_resource type="Theme" id=8]

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = ExtResource( 5 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.933333, 0.780392, 0.584314, 1 )
position = Vector2( 153, 91 )
rotation = -1.5708
scale = Vector2( 0.056, 0.134 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.941176, 0.65098, 0.27451, 1 )
position = Vector2( 364, 91 )
rotation = -1.5708
scale = Vector2( 0.056, 0.134 )
texture = ExtResource( 6 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 50.0
margin_top = 1174.0
margin_right = 1110.0
margin_bottom = 1794.0
rect_rotation = 270.0
texture = ExtResource( 3 )
region_rect = Rect2( 4, 5, 496.828, 149.031 )
patch_margin_left = 13
patch_margin_top = 15
patch_margin_right = 12
patch_margin_bottom = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Label" parent="NinePatchRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1097.0
margin_top = 9.85
margin_right = 1289.0
margin_bottom = 43.85
rect_rotation = 90.0
custom_fonts/font = SubResource( 1 )
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="NinePatchRect/Upgrade"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 195.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="NinePatchRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1097.0
margin_top = 216.0
margin_right = 1145.0
margin_bottom = 230.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 2 )
text = "options"

[node name="MusicVolume" type="Label" parent="NinePatchRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 996.861
margin_top = 43.8278
margin_right = 1305.86
margin_bottom = 88.8278
rect_rotation = 90.0
custom_fonts/font = SubResource( 3 )
text = "-Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectVolume" type="Label" parent="NinePatchRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 892.0
margin_top = 36.3363
margin_right = 1326.0
margin_bottom = 129.336
rect_rotation = 90.0
custom_fonts/font = SubResource( 4 )
text = "-Sound effects 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="TextureButton" parent="NinePatchRect"]
modulate = Color( 0.568627, 0.419608, 0.215686, 1 )
margin_left = 587.28
margin_top = 87.5176
margin_right = 1667.28
margin_bottom = 2307.52
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TextureButton" parent="NinePatchRect"]
modulate = Color( 0.498039, 0.341176, 0.133333, 1 )
margin_left = 382.0
margin_top = 89.0
margin_right = 1462.0
margin_bottom = 2309.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="CheckButton" parent="NinePatchRect"]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
light_mask = 262145
material = SubResource( 5 )
margin_left = 1031.95
margin_top = 444.732
margin_right = 1107.95
margin_bottom = 497.732
rect_rotation = 90.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectButton" type="CheckButton" parent="NinePatchRect"]
material = SubResource( 7 )
margin_left = 922.562
margin_top = 448.151
margin_right = 998.562
margin_bottom = 501.151
rect_rotation = 90.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 8 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveLabel" type="Label" parent="NinePatchRect"]
margin_left = 753.927
margin_top = 225.167
margin_right = 928.927
margin_bottom = 340.167
rect_rotation = 90.0
custom_fonts/font = SubResource( 9 )
text = "Save 
Game"

[node name="MenuLabel" type="Label" parent="NinePatchRect"]
margin_left = 535.73
margin_top = 179.374
margin_right = 798.73
margin_bottom = 272.374
rect_rotation = 90.0
custom_fonts/font = SubResource( 10 )
text = "Return to
Main menu"

[node name="GameSaved" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 260.403
margin_top = 912.091
margin_right = 452.403
margin_bottom = 940.091
custom_fonts/font = SubResource( 11 )
text = "game saved"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsCamera" type="Camera2D" parent="."]
anchor_mode = 0
[connection signal="pressed" from="NinePatchRect/Upgrade/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NinePatchRect/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="NinePatchRect/MenuButton" to="." method="_on_MenuButton_pressed"]
